# rust-stm32-starter

./: Cargo.toml
crates/chip-entrypoint/: Cargo.toml
crates/chip-entrypoint/.cargo/: config.toml
crates/chip-entrypoint/src/: main.rs
