[package]
name = "chip-entrypoint"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt"] }

defmt = "0.3.10"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
chrono = { version = "^0.4", default-features = false}

[profile.release]
debug = 2